BradkenProduction/force-app/main/default/objects/Sprint__c/fields/Config_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Config_End_Date__c</fullName>
    <label>Config End Date</label>
    <type>Date</type>
</CustomField>