BradkenProduction/force-app/main/default/objects/Sprint__c/fields/Config_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Config_Start_Date__c</fullName>
    <label>Config Start Date</label>
    <type>Date</type>
</CustomField>