BradkenProduction/force-app/main/default/objects/Sprint__c/fields/Configuration_Areas__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Areas__c</fullName>
    <label>Configuration Areas</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>