BradkenProduction/force-app/main/default/objects/Sprint__c/fields/Maximum_Points__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Points__c</fullName>
    <label>Maximum Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>