BradkenProduction/force-app/main/default/objects/Sprint__c/fields/Testing_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Testing_End_Date__c</fullName>
    <label>Testing End Date</label>
    <type>Date</type>
</CustomField>