BradkenProduction/force-app/main/default/objects/Sprint__c/fields/Testing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Testing_Start_Date__c</fullName>
    <label>Testing Start Date</label>
    <type>Date</type>
</CustomField>