BradkenProduction/force-app/main/default/objects/Sprint__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Config_Start_Date__c</columns>
    <columns>Config_End_Date__c</columns>
    <columns>Testing_Start_Date__c</columns>
    <columns>Testing_End_Date__c</columns>
    <columns>Maximum_Points__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>